--- a/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
+++ b/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
@@ -21,45 +21,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "AAc_-AeGEE5H",
-        "outputId": "61ef8666-a8bd-4d7c-eb1b-ca56d7e5e4a6"
+        "id": "AAc_-AeGEE5H"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
-            "Requirement already satisfied: highway-env in /usr/local/lib/python3.11/dist-packages (1.10.1)\n",
-            "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
-            "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
-            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
-            "Requirement already satisfied: pygame>=2.0.2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.6.1)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from highway-env) (3.10.0)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.2.2)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.14.1)\n",
-            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (3.1.1)\n",
-            "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (4.13.1)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.3.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (4.57.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.4.8)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (24.2)\n",
-            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (11.1.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (3.2.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install pygame\n",
         "!pip install highway-env"
@@ -76,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -114,30 +81,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "y922XK-cIewr",
-        "outputId": "308b4869-eed6-479d-e0da-1903e2399bc9"
+        "id": "y922XK-cIewr"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7d186f425550>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Configure Environment Conditions\n",
         "config = {\n",
-        "    \"lanes_count\": 4,\n",
+        "    \"lanes_count\": 3,\n",
         "    \"lane_width\": 3.75,\n",
         "    \"observation\": {\n",
         "        \"type\": \"Kinematics\",\n",
@@ -156,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -294,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "SJ68SiyJTSx7"
       },
@@ -395,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "7g2c9HRSJ8Xs"
       },
@@ -528,7 +480,7 @@
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -542,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "jU_TDnfv7CzO"
       },
@@ -605,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -643,9 +595,48 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RYA-H09sIw2_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RYA-H09sIw2_",
+        "outputId": "fba5a832-51ad-4900-adeb-7be64c9defe2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "**** Target network updated at episode 0 ****\n",
+            "Episode 0 finished after 50 steps. Total Reward: -28.88\n",
+            "Episode 1 finished after 124 steps. Total Reward: -3.87\n",
+            "Episode 2 finished after 228 steps. Total Reward: -14.86\n",
+            "Episode 3 finished after 143 steps. Total Reward: -3.23\n",
+            "Episode 4 finished after 186 steps. Total Reward: -3.55\n",
+            "Episode 5 finished after 103 steps. Total Reward: -25.36\n",
+            "Episode 6 finished after 96 steps. Total Reward: -4.25\n",
+            "Episode 7 finished after 119 steps. Total Reward: -15.15\n",
+            "Episode 8 finished after 11 steps. Total Reward: -17.73\n",
+            "Episode 9 finished after 23 steps. Total Reward: -36.41\n",
+            "**** Target network updated at episode 10 ****\n",
+            "Episode 10 finished after 295 steps. Total Reward: -4.11\n",
+            "Episode 11 finished after 41 steps. Total Reward: -66.35\n",
+            "Episode 12 finished after 181 steps. Total Reward: -8.67\n",
+            "Episode 13 finished after 160 steps. Total Reward: -32.09\n",
+            "Episode 14 finished after 475 steps. Total Reward: -5.06\n",
+            "Episode 15 finished after 123 steps. Total Reward: -15.14\n",
+            "Episode 16 finished after 8 steps. Total Reward: -12.89\n",
+            "Episode 17 finished after 170 steps. Total Reward: -3.78\n",
+            "Episode 18 finished after 121 steps. Total Reward: -3.81\n",
+            "Episode 19 finished after 36 steps. Total Reward: -57.73\n",
+            "**** Target network updated at episode 20 ****\n",
+            "Episode 20 finished after 158 steps. Total Reward: -11.48\n",
+            "Episode 21 finished after 152 steps. Total Reward: -19.51\n",
+            "Episode 22 finished after 88 steps. Total Reward: -15.31\n",
+            "Episode 23 finished after 300 steps. Total Reward: -10.14\n",
+            "Episode 24 finished after 127 steps. Total Reward: -12.19\n"
+          ]
+        }
+      ],
       "source": [
         "################################################################################\n",
         "\"\"\"Initialization\"\"\"\n",
