--- a/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
+++ b/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
@@ -593,47 +593,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 228
         },
         "id": "RYA-H09sIw2_",
-        "outputId": "fba5a832-51ad-4900-adeb-7be64c9defe2"
+        "outputId": "f7cb9632-69e3-47d4-9e3e-1ce5cb3feb0b"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "**** Target network updated at episode 0 ****\n",
-            "Episode 0 finished after 50 steps. Total Reward: -28.88\n",
-            "Episode 1 finished after 124 steps. Total Reward: -3.87\n",
-            "Episode 2 finished after 228 steps. Total Reward: -14.86\n",
-            "Episode 3 finished after 143 steps. Total Reward: -3.23\n",
-            "Episode 4 finished after 186 steps. Total Reward: -3.55\n",
-            "Episode 5 finished after 103 steps. Total Reward: -25.36\n",
-            "Episode 6 finished after 96 steps. Total Reward: -4.25\n",
-            "Episode 7 finished after 119 steps. Total Reward: -15.15\n",
-            "Episode 8 finished after 11 steps. Total Reward: -17.73\n",
-            "Episode 9 finished after 23 steps. Total Reward: -36.41\n",
-            "**** Target network updated at episode 10 ****\n",
-            "Episode 10 finished after 295 steps. Total Reward: -4.11\n",
-            "Episode 11 finished after 41 steps. Total Reward: -66.35\n",
-            "Episode 12 finished after 181 steps. Total Reward: -8.67\n",
-            "Episode 13 finished after 160 steps. Total Reward: -32.09\n",
-            "Episode 14 finished after 475 steps. Total Reward: -5.06\n",
-            "Episode 15 finished after 123 steps. Total Reward: -15.14\n",
-            "Episode 16 finished after 8 steps. Total Reward: -12.89\n",
-            "Episode 17 finished after 170 steps. Total Reward: -3.78\n",
-            "Episode 18 finished after 121 steps. Total Reward: -3.81\n",
-            "Episode 19 finished after 36 steps. Total Reward: -57.73\n",
-            "**** Target network updated at episode 20 ****\n",
-            "Episode 20 finished after 158 steps. Total Reward: -11.48\n",
-            "Episode 21 finished after 152 steps. Total Reward: -19.51\n",
-            "Episode 22 finished after 88 steps. Total Reward: -15.31\n",
-            "Episode 23 finished after 300 steps. Total Reward: -10.14\n",
-            "Episode 24 finished after 127 steps. Total Reward: -12.19\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'lead_position_idm' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-a74701cc71d4>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Set initial Input variables using the gap, current velocity, and relative lead velocity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0minput_variables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mlead_position_idm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mego_velocity_idm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlead_velocity_idm\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Setup the IDM Model for Longitudinal control\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'lead_position_idm' is not defined"
           ]
         }
       ],
@@ -708,7 +686,6 @@
         "    collision_check = False\n",
         "\n",
         "    # Agent activation flag and target lane storage\n",
-        "    agent_active = False\n",
         "    activated_target_lane = None\n",
         "\n",
         "    # Update IDM inputs based on initial state\n",
@@ -742,21 +719,12 @@
         "        # Determine target lane\n",
         "        target_id = activated_target_lane\n",
         "\n",
-        "        # Activate agent if gap is below the threshold\n",
-        "        if gap < distance_threshold or abs(agent_state['thetha']) != 0:\n",
-        "            agent_active = True\n",
-        "        else:\n",
-        "            agent_active = False\n",
-        "\n",
         "        # Epsilon-greedy Action\n",
-        "        if agent_active:\n",
-        "            if random.random() < epsilon:\n",
-        "                agent_action = random.uniform(-1, 1)\n",
-        "            else:\n",
-        "                with torch.no_grad():\n",
-        "                    agent_action = policy_network.action(agent_state, target_id=target_id).item()\n",
+        "        if random.random() < epsilon:\n",
+        "            agent_action = random.uniform(-1, 1)\n",
         "        else:\n",
-        "            agent_action = 0.0\n",
+        "            with torch.no_grad():\n",
+        "                agent_action = policy_network.action(agent_state, target_id=target_id).item()\n",
         "\n",
         "        # Store prior state for buffer\n",
         "        old_state = agent_state\n",
@@ -812,9 +780,8 @@
         "        input_variables = [gap, ego_state_idm['vx'], delta_velocity]\n",
         "\n",
         "\n",
-        "        if agent_active:\n",
-        "          # Update experience buffer\n",
-        "          buffer.add(old_state, agent_action, reward, agent_state, terminal)\n",
+        "        # Update experience buffer\n",
+        "        buffer.add(old_state, agent_action, reward, agent_state, terminal)\n",
         "\n",
         "        ########################################################################\n",
         "        \"\"\"Q-Learning Update\"\"\"\n",
@@ -854,7 +821,6 @@
         "        print(f\"Avg Loss (last {steps} steps): {avg_loss_last_n:.4f}\")\n",
         "\n",
         "# End of training loop\n",
-        "\n",
         "# Plot Total Reward per Episode\n",
         "episode_rewards_arr = np.array(episode_rewards)\n",
         "\n",
