--- a/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
+++ b/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
@@ -347,10 +347,10 @@
         "    Q(s,a) = A(s)*(B(s)-a)^2 + C(s)\n",
         "    \"\"\"\n",
         "    if isinstance(state, dict):\n",
-        "        self.state = torch.tensor(\n",
-        "            [state[key] for key in ['x', 'y', 'vx', 'thetha', 'lane_width', 'lane_id', 'self_curvature', 'longitudinal_acceleration']],\n",
-        "            dtype=torch.float32\n",
-        "        ).unsqueeze(0)\n",
+        "      state_tensor = torch.tensor(\n",
+        "          [state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y', 'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
+        "          dtype=torch.float32\n",
+        "      ).unsqueeze(0)\n",
         "    else:\n",
         "        self.state = state\n",
         "    # Use a directly if it's already a tensor\n",
@@ -373,7 +373,7 @@
         "      if isinstance(state, dict):\n",
         "          state['lane_id'] = target_id\n",
         "          state_tensor = torch.tensor(\n",
-        "              [state[key] for key in ['x', 'y', 'vx', 'thetha', 'lane_width', 'lane_id', 'self_curvature', 'longitudinal_acceleration']],\n",
+        "              [state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y', 'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
         "              dtype=torch.float32\n",
         "          ).unsqueeze(0)\n",
         "      else:\n",
@@ -414,11 +414,11 @@
         "  def add(self, state, action, reward, next_state, terminal_condition):\n",
         "    # Experience is the state transition tensor/vector\n",
         "    state_tensor = torch.tensor(\n",
-        "        [state[key] for key in ['x', 'y', 'vx', 'thetha', 'lane_width', 'lane_id', 'self_curvature', 'longitudinal_acceleration']],\n",
+        "        [state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y', 'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
         "        dtype=torch.float32\n",
         "    ).unsqueeze(0)\n",
         "    next_state_tensor = torch.tensor(\n",
-        "        [next_state[key] for key in ['x', 'y', 'vx','thetha', 'lane_width', 'lane_id', 'self_curvature', 'longitudinal_acceleration']],\n",
+        "        [next_state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y', 'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
         "        dtype=torch.float32\n",
         "    ).unsqueeze(0)\n",
         "    action_tensor = torch.tensor([[action]], dtype=torch.float32)\n",
@@ -640,9 +640,124 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RYA-H09sIw2_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RYA-H09sIw2_",
+        "outputId": "aa375a3a-bfe3-4767-e72b-5e03f74a0238"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "**** Target network updated at episode 0 ****\n",
+            "Episode 0 finished after 61 steps. Total Reward: -101.91\n",
+            "Episode 1 finished after 73 steps. Total Reward: -120.47\n",
+            "Episode 2 finished after 67 steps. Total Reward: -109.50\n",
+            "Episode 3 finished after 70 steps. Total Reward: -115.51\n",
+            "Episode 4 finished after 59 steps. Total Reward: -95.91\n",
+            "Episode 5 finished after 78 steps. Total Reward: -127.92\n",
+            "Episode 6 finished after 66 steps. Total Reward: -109.48\n",
+            "Episode 7 finished after 56 steps. Total Reward: -89.72\n",
+            "Episode 8 finished after 81 steps. Total Reward: -130.66\n",
+            "Episode 9 finished after 99 steps. Total Reward: -161.00\n",
+            "Episode 10 finished after 58 steps. Total Reward: -95.15\n",
+            "Episode 11 finished after 54 steps. Total Reward: -88.13\n",
+            "Episode 12 finished after 63 steps. Total Reward: -105.48\n",
+            "Episode 13 finished after 69 steps. Total Reward: -112.32\n",
+            "Episode 14 finished after 53 steps. Total Reward: -87.18\n",
+            "Avg Loss (last 53 steps): 11.1021\n",
+            "Episode 15 finished after 61 steps. Total Reward: -100.35\n",
+            "Avg Loss (last 61 steps): 0.4310\n",
+            "Episode 16 finished after 61 steps. Total Reward: -100.12\n",
+            "Avg Loss (last 61 steps): 0.0283\n",
+            "Episode 17 finished after 72 steps. Total Reward: -115.98\n",
+            "Avg Loss (last 72 steps): 10.1258\n",
+            "Episode 18 finished after 58 steps. Total Reward: -94.80\n",
+            "Avg Loss (last 58 steps): 7.6206\n",
+            "Episode 19 finished after 98 steps. Total Reward: -156.63\n",
+            "Avg Loss (last 98 steps): 0.0552\n",
+            "Episode 20 finished after 106 steps. Total Reward: -171.31\n",
+            "Avg Loss (last 106 steps): 0.0257\n",
+            "Episode 21 finished after 65 steps. Total Reward: -103.50\n",
+            "Avg Loss (last 65 steps): 0.0257\n",
+            "Episode 22 finished after 102 steps. Total Reward: -162.10\n",
+            "Avg Loss (last 102 steps): 0.0289\n",
+            "Episode 23 finished after 152 steps. Total Reward: -243.09\n",
+            "Avg Loss (last 152 steps): 0.0287\n",
+            "Episode 24 finished after 142 steps. Total Reward: -228.66\n",
+            "Avg Loss (last 142 steps): 0.0279\n",
+            "Episode 25 finished after 54 steps. Total Reward: -86.16\n",
+            "Avg Loss (last 54 steps): 0.0275\n",
+            "Episode 26 finished after 113 steps. Total Reward: -183.71\n",
+            "Avg Loss (last 113 steps): 0.0271\n",
+            "Episode 27 finished after 80 steps. Total Reward: -128.35\n",
+            "Avg Loss (last 80 steps): 0.0275\n",
+            "Episode 28 finished after 200 steps. Total Reward: -323.25\n",
+            "Avg Loss (last 200 steps): 0.0269\n",
+            "Episode 29 finished after 112 steps. Total Reward: -180.84\n",
+            "Avg Loss (last 112 steps): 0.0254\n",
+            "Episode 30 finished after 101 steps. Total Reward: -163.59\n",
+            "Avg Loss (last 101 steps): 0.0245\n",
+            "Episode 31 finished after 72 steps. Total Reward: -116.31\n",
+            "Avg Loss (last 72 steps): 0.0244\n",
+            "Episode 32 finished after 91 steps. Total Reward: -148.65\n",
+            "Avg Loss (last 91 steps): 0.0247\n",
+            "Episode 33 finished after 107 steps. Total Reward: -173.04\n",
+            "Avg Loss (last 107 steps): 0.0240\n",
+            "Episode 34 finished after 104 steps. Total Reward: -167.01\n",
+            "Avg Loss (last 104 steps): 196.0831\n",
+            "Episode 35 finished after 178 steps. Total Reward: -282.88\n",
+            "Avg Loss (last 178 steps): 1.9867\n",
+            "Episode 36 finished after 71 steps. Total Reward: -115.79\n",
+            "Avg Loss (last 71 steps): 0.0248\n",
+            "Episode 37 finished after 123 steps. Total Reward: -191.62\n",
+            "Avg Loss (last 123 steps): 0.0263\n",
+            "Episode 38 finished after 103 steps. Total Reward: -160.29\n",
+            "Avg Loss (last 103 steps): 0.0270\n",
+            "Episode 39 finished after 174 steps. Total Reward: -273.52\n",
+            "Avg Loss (last 174 steps): 0.0288\n",
+            "Episode 40 finished after 72 steps. Total Reward: -118.97\n",
+            "Avg Loss (last 72 steps): 0.0291\n",
+            "Episode 41 finished after 199 steps. Total Reward: -320.94\n",
+            "Avg Loss (last 199 steps): 0.0292\n",
+            "Episode 42 finished after 177 steps. Total Reward: -286.06\n",
+            "Avg Loss (last 177 steps): 0.0283\n",
+            "Episode 43 finished after 170 steps. Total Reward: -272.01\n",
+            "Avg Loss (last 170 steps): 0.0286\n",
+            "Episode 44 finished after 134 steps. Total Reward: -215.46\n",
+            "Avg Loss (last 134 steps): 0.0278\n",
+            "Episode 45 finished after 143 steps. Total Reward: -228.36\n",
+            "Avg Loss (last 143 steps): 0.0277\n",
+            "Episode 46 finished after 154 steps. Total Reward: -249.85\n",
+            "Avg Loss (last 154 steps): 0.0283\n",
+            "Episode 47 finished after 168 steps. Total Reward: -267.21\n",
+            "Avg Loss (last 168 steps): 0.0278\n",
+            "Episode 48 finished after 125 steps. Total Reward: -201.52\n",
+            "Avg Loss (last 125 steps): 0.0280\n",
+            "Episode 49 finished after 179 steps. Total Reward: -291.24\n",
+            "Avg Loss (last 179 steps): 0.0282\n",
+            "**** Target network updated at episode 50 ****\n",
+            "Episode 50 finished after 75 steps. Total Reward: -124.07\n",
+            "Avg Loss (last 75 steps): 0.0287\n",
+            "Episode 51 finished after 110 steps. Total Reward: -171.72\n",
+            "Avg Loss (last 110 steps): 0.2742\n",
+            "Episode 52 finished after 56 steps. Total Reward: -89.91\n",
+            "Avg Loss (last 56 steps): 0.0444\n",
+            "Episode 53 finished after 64 steps. Total Reward: -104.16\n",
+            "Avg Loss (last 64 steps): 0.0292\n",
+            "Episode 54 finished after 58 steps. Total Reward: -92.47\n",
+            "Avg Loss (last 58 steps): 0.0267\n",
+            "Episode 55 finished after 64 steps. Total Reward: -101.74\n",
+            "Avg Loss (last 64 steps): 0.0279\n",
+            "Episode 56 finished after 69 steps. Total Reward: -111.88\n",
+            "Avg Loss (last 69 steps): 0.0273\n",
+            "Episode 57 finished after 53 steps. Total Reward: -86.40\n",
+            "Avg Loss (last 53 steps): 0.0274\n"
+          ]
+        }
+      ],
       "source": [
         "################################################################################\n",
         "\"\"\"Initialization\"\"\"\n",
@@ -662,21 +777,17 @@
         "gamma = 0.9\n",
         "buffer_size = 5000\n",
         "num_episodes = 10000\n",
-        "batch_size = 500\n",
+        "batch_size = 1000\n",
         "timesteps = 40000\n",
         "update_target_frequency = 50\n",
         "target_id = env.unwrapped.vehicle.lane_index[-1]\n",
-        "threshold = 20\n",
         "\n",
         "# Environment Information\n",
         "L = env.unwrapped.vehicle.LENGTH\n",
         "agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
         "state_dim = len(agent_state)\n",
-        "epsilon = 0.1\n",
-        "epsilon_decay_rate = 10000\n",
-        "\n",
-        "# Define distance threshold between ego and lead vehicle to activate the agent\n",
-        "distance_threshold = threshold\n",
+        "epsilon = 0.5\n",
+        "epsilon_decay_rate = 1000\n",
         "\n",
         "# Initialize Buffer\n",
         "buffer = Experience_Buffer(buffer_size)\n",
@@ -730,7 +841,7 @@
         "    counter = 0\n",
         "\n",
         "    # Main loop for each episode\n",
-        "    while steps < timesteps and counter < 100:\n",
+        "    while steps < timesteps and counter < 50:\n",
         "        steps += 1\n",
         "\n",
         "        if not on_road_check or collision_check:\n",
@@ -752,12 +863,11 @@
         "        target_id = activated_target_lane\n",
         "\n",
         "        # Epsilon-greedy Action\n",
-        "        #if random.random() < epsilon:\n",
-        "        #    agent_action = random.uniform(-1, 1)\n",
-        "        #else:\n",
-        "\n",
-        "        with torch.no_grad():\n",
-        "            agent_action = policy_network.action(agent_state, target_id=target_id).item()\n",
+        "        if random.random() < epsilon:\n",
+        "          agent_action = random.uniform(-1, 1)\n",
+        "        else:\n",
+        "          with torch.no_grad():\n",
+        "              agent_action = policy_network.action(agent_state, target_id=target_id).item()\n",
         "\n",
         "        # Store prior state for buffer\n",
         "        old_state = agent_state\n",
@@ -811,7 +921,6 @@
         "        gap = lead_state['x']\n",
         "        delta_velocity = lead_state['vx']\n",
         "        input_variables = [gap, ego_state_idm['vx'], delta_velocity]\n",
-        "\n",
         "\n",
         "        # Update experience buffer\n",
         "        buffer.add(old_state, agent_action, reward, agent_state, terminal)\n",
